#276 Fix text selection when drag&drop datastreams on Safari

--- a/server/http-dashboard/app/scenes/Products/components/DataStreams/styles.less
+++ b/server/http-dashboard/app/scenes/Products/components/DataStreams/styles.less
@@ -1,4 +1,12 @@
 .product-datastreams-items-list {
+  .no-mouse-selection {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
   .product-metadata-item {
     padding: 32px 16px 8px;
   }
